[package]

name = "iptables-compose"
description = "YAML files as iptables configuration sources"
license = "MIT"
readme = "README.md"
keywords = ["iptables", "yaml", "command-line", "configuration"]
homepage = "https://github.com/samuelngs/iptables-compose"
version = "1.1.1"
authors = ["Samuel <sam@infinitely.io>"]

[dependencies]
clap = "2.33.3"
yaml-rust = "0.2.2"
